Remoção de funções desnecessárias

--- a/Ray_tracing.ipynb
+++ b/Ray_tracing.ipynb
@@ -87,6 +87,7 @@
     "path = \"./objetos\"\n",
     "\n",
     "cenas = []\n",
+    "Objetos = []\n",
     "\n",
     "for filename in os.listdir(path):\n",
     "    f = os.path.join(path, filename)\n",
@@ -94,16 +95,10 @@
     "        file = open(f)\n",
     "        text = json.load(file)\n",
     "        cenas.append(text)\n",
-    "        file.close()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 170,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cena = cenas[0]"
+    "        file.close()\n",
+    "\n",
+    "cena = cenas[0]\n",
+    "\n"
    ]
   },
   {
@@ -114,11 +109,8 @@
    "source": [
     "for element in cena['objects']:\n",
     "    form = list(element.keys())[1]\n",
-    "    isomorph = Objeto(element['color'], form, element[form])\n",
-    "\n",
-    "    # if 'plane' in element.keys():\n",
-    "    #     obj = Plano(element['plane']['sample'], element['plane']['normal'], element['color'])\n",
-    "        "
+    "    obj = Objeto(element['color'], form, element[form])\n",
+    "    Objetos.append(obj)"
    ]
   },
   {
@@ -189,21 +181,6 @@
    "source": [
     "c = e - w*d\n",
     "Q00 = c + (0.5 * s * (v_res-1) * v) - (0.5 * s * (h_res-1) * u)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Obj:\n",
-    "    def __init__(self, points):\n",
-    "        self.points = np.array(points)\n",
-    "    \n",
-    "    @classmethod\n",
-    "    def intersect():\n",
-    "        return 2"
    ]
   }
  ],
